Correction des chemins relatifs pour GitHub Pages

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EchoGIS1 - FAQ Personnel GIS 1</title>
     <meta name="description" content="Foire aux questions pour le personnel du GIS 1. Consultez les réponses aux questions fréquentes et soumettez vos propres questions." />
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
