feat: add PWA support

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
+    <link rel="manifest" href="/manifest.webmanifest" />
+    <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EchoGIS1 - FAQ Personnel GIS 1</title>
     <meta name="description" content="Foire aux questions pour le personnel du GIS 1. Consultez les réponses aux questions fréquentes et soumettez vos propres questions." />
